--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <body>
-    <h1>This is where the magic happens</h1>
+    <h1>Rapid Coder</h1>
     <app-game-master></app-game-master>
+    <footer>
+        <p>Disclaimer! This is a prototype!</p>
+    </footer>
 </body>
 
