css fixed and app-game-master component working

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,12 +1,10 @@
-html, body
-  height: 100vh
-  margin: 0
-  padding: 0
-
 app-game-master
+  height: 100%
+  margin-top: -47px
   display: flex
   justify-content: center
-  vertical-align: center
+  align-items: center
+
 
 footer
   width: 100%
@@ -14,5 +12,6 @@ footer
   bottom: 0
   position: fixed
 
-h1, p
-  margin: 0
+h1
+  padding-top: 10px
+  margin: 0 0 0 16px
