--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face
+  font-family: Helvetica
+  src: url("./assets/HelveticaNowDisplayXBlk.otf")
+
 html, body
   height: 100vh
+  font-family: Helvetica, serif
   margin: 0
   padding: 0
+
+
