--- a/src/app/components/game-master/game-master.component.sass
+++ b/src/app/components/game-master/game-master.component.sass
@@ -2,3 +2,8 @@ p
   width: 70%
   margin-left: auto
   margin-right: auto
+
+code
+  font-size: 20px
+  font-family: SourceCodeProMedium, serif
+   
