added language prop to context service, added font

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,10 @@
 @font-face
   font-family: Helvetica
-  src: url("src/assets/HelveticaNowDisplayXBlk.otf")
+  src: url("assets/HelveticaNowDisplayXBlk.otf")
+  
+@font-face
+  font-family: SourceCodeProMedium
+  src: url("assets/SourceCodePro-Medium.ttf")
 
 html, body
   height: 100vh
