HOTFIX: Color stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<h1>Rapid Coder</h1>
+<h1 class="hljs">Rapid Coder</h1>
 <app-game-master></app-game-master>
 <footer>
     <p>Disclaimer! This is a prototype!</p>
