--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,7 +1,7 @@
 @font-face
   font-family: Helvetica
   src: url("assets/HelveticaNowDisplayXBlk.otf")
-  
+
 @font-face
   font-family: SourceCodeProMedium
   src: url("assets/SourceCodePro-Medium.ttf")
@@ -12,4 +12,6 @@ html, body
   margin: 0
   padding: 0
 
+  .codeLine
+    display: flex !important
 
