--- a/src/app/components/game-master/game-master.component.sass
+++ b/src/app/components/game-master/game-master.component.sass
@@ -3,6 +3,6 @@ p
   margin-left: auto
   margin-right: auto
 
-code
-  font-size: 20px
-  font-family: SourceCodeProMedium, serif
+pre
+  font-size: 30px
+  font-family: SourceCodeProMedium, serif !important
